WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
288356
[WebGPU] Generated metal does not compile on
https://bercon.github.io/roquefort/
https://bugs.webkit.org/show_bug.cgi?id=288356
Summary
[WebGPU] Generated metal does not compile on https://bercon.github.io/roquefort/
Mike Wyrzykowski
Reported
2025-02-23 22:52:13 PST
[WebGPU]
https://bercon.github.io/roquefort/
opens to an empty page
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-02-23 22:52:31 PST
<
rdar://problem/145449315
>
Tadeu Zagallo
Comment 2
2025-02-24 10:06:25 PST
Pull request:
https://github.com/WebKit/WebKit/pull/41206
EWS
Comment 3
2025-02-25 07:53:54 PST
Committed
291025@main
(785d74a7e396): <
https://commits.webkit.org/291025@main
> Reviewed commits have been landed. Closing PR #41206 and removing active labels.
EWS
Comment 4
2025-02-26 07:38:00 PST
Committed
289651.183@safari-7621-branch
(d59b01f7112f): <
https://commits.webkit.org/289651.183@safari-7621-branch
> Reviewed commits have been landed. Closing PR #2681 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug